Mensagem explicando o trabalho que foi feito

--- a/pom.xml
+++ b/pom.xml
@@ -149,5 +149,12 @@
             </plugin>
         </plugins>
     </build>
+    
+    <developers>
+    	<developer>
+    		<name>Henricão da Massa</name>
+    		<email>henricao@massa.com.br</email>
+    	</developer>
+    </developers>
 
 </project>
